# S-Series-Explorer

./: .gitignore  LICENSE  PROGRAM_RULES.txt  PROJECT_RULES.txt  README.md  build_exe.py  launcher.py  launcher.pyw  pyproject.toml  run.bat  s_series_explorer.py  start_windowless.vbs  test_s_series_explorer.py
.bootstrap/: archive.part00  archive.part01  archive.part02
.github/workflows/: bootstrap.yml  build-windows.yml  ci.yml
SSeriesExplorer.WinForms/: MainForm.cs  Program.cs  SSeriesExplorer.WinForms.csproj
docs/: architecture.md  roadmap.md
src/s_series_explorer/: __init__.py  app.py  compare.py  corel_designer.py  csv_export.py  filename_parser.py  models.py  scanner.py
tests/: test_compare.py  test_corel_designer.py  test_filename_parser.py
