[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "s-series-explorer"
version = "0.3.2"
description = "Windows desktop explorer for S-Series/S1000D filenames, folder comparison and Corel DESIGNER metadata"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Christian Reich"}]
dependencies = []

[project.scripts]
s-series-explorer = "s_series_explorer.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
